--- a/src/Pages/LoginPage/LoginPage.scss
+++ b/src/Pages/LoginPage/LoginPage.scss
@@ -2,7 +2,7 @@
 
 @import '../../reset.scss';
 
-
+// test
 .auth{
     max-width: 50%;
     margin: 0 auto;
@@ -12,7 +12,7 @@
     border-radius: $border;
 }
 
-@media(max-width: 926px){
+@media(max-width: 1100px){
     .auth{
         max-width: 100%;
     }
