--- a/src/Pages/AddProduct/AddProduct.scss
+++ b/src/Pages/AddProduct/AddProduct.scss
@@ -2,20 +2,48 @@
 @import '../../reset.scss';
 
 .add-product{
+    margin-bottom: 45px;
     &-wrapper{
-        border: 1px solid;
+        border: 1px solid rgb(213, 213, 213);
+        box-shadow: 0 2px 4px 0 rgba(8, 9, 10, 0.0784313725);
         padding: 20px;
         border-radius: $border;
 
         & input, textarea{
             margin-bottom: 20px;
-            border: 1px solid;
+            border: 1px solid rgb(213, 213, 213);
             border-radius: 6px;
             padding: 10px;
+            width: 100%;
         }
+        & textarea{
+            min-height: 100px;
+            min-width: 100%;
+            max-width: 100%;
+        }
+
         & label{
             display: block;
             margin-bottom: 10px;
         }
+        & div{
+            margin-bottom: 40px;
+        }
     }
+
+    // &__button{
+    //     margin-bottom: 20px;
+    // }
+
+    &__title{
+        font-size: 20px;
+    }
+
+    &__desc{
+        color: rgb(175, 175, 175);
+    }
+}
+
+.error{
+    margin-top: 20px;
 }
