--- a/src/Pages/AddProduct/AddProduct.scss
+++ b/src/Pages/AddProduct/AddProduct.scss
@@ -9,7 +9,7 @@
         padding: 20px;
         border-radius: $border;
 
-        & input, textarea{
+        & input, textarea, .add-product__select{
             margin-bottom: 20px;
             border: 1px solid rgb(213, 213, 213);
             border-radius: 6px;
@@ -18,8 +18,10 @@
         }
         & textarea{
             min-height: 100px;
+            max-height: 300px;
             min-width: 100%;
             max-width: 100%;
+            font-size: $fz-medium;
         }
 
         & label{
@@ -46,4 +48,105 @@
 
 .error{
     margin-top: 20px;
+}
+
+.add-product__button .btn{
+    font-size: 22px;
+}
+
+
+.add-product__select{
+    border: none;
+    appearance: none;
+    outline: none;
+    padding: 0 30px 0 15px;
+    // width: 100%;
+    width: 20%;
+    color: #fff;
+    font-size: 20px;
+    background-color: $color-blue;
+
+    &__container{
+        // display: flex;
+        // justify-content: center;
+        // position: relative;
+        min-width: 250px;
+        height: 70px;
+    }
+}
+
+.add-product__select {
+    max-width: 250px;
+    background-color: #007bff;
+}
+
+
+.file-input-container {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.custom-file-button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 8px 16px;
+    // border-radius: 4px;
+    border-radius: $border;
+    cursor: pointer;
+    display: inline-block;
+    margin-top: 12px;
+}
+
+.custom-file-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.add-product__select option {
+    background-color: #fff;
+    color: black;
+}
+
+.file-selected-text {
+    margin-left: 10px;
+}
+
+.selected {
+    color: green; // Цвет текста, если изображение выбрано
+}
+
+.not-selected {
+    color: red; // Цвет текста, если изображение не выбрано
+}
+
+.test{
+    color: red;
+}
+
+.preload-gif {
+    width: 40px; // Устанавливаем желаемую ширину
+    height: 40px; // Устанавливаем желаемую высоту
+}
+
+
+
+
+@media (max-width: 500px){
+
+    .file-input-container {
+        flex-direction: column;
+    }
+
+    .custom-file-button{
+        width: 100%;
+        text-align: center;
+    }
 }
