--- a/src/Pages/AddProduct/AddProduct.scss
+++ b/src/Pages/AddProduct/AddProduct.scss
@@ -13,8 +13,8 @@
             margin-bottom: 20px;
             border: 1px solid rgb(213, 213, 213);
             border-radius: 6px;
-            padding: 10px;
-            width: 100%;
+            padding: 10px 20px;
+            width: auto;
         }
         & textarea{
             min-height: 100px;
@@ -56,6 +56,7 @@
 
 
 .add-product__select{
+    cursor: pointer;
     border: none;
     appearance: none;
     outline: none;
