--- a/src/Pages/CartPage/CartPage.scss
+++ b/src/Pages/CartPage/CartPage.scss
@@ -6,9 +6,9 @@
 
 .cart{
 
-    &-page{
-        margin-top: 140px;
-    }
+    // &-page{
+    //     margin-top: 140px;
+    // }
 
     &-title{
         margin-bottom: 40px;
