--- a/frontend/src/Components/Hero/Hero.scss
+++ b/frontend/src/Components/Hero/Hero.scss
@@ -6,6 +6,7 @@
     margin-bottom: 70px;
 
     &-banner{
+        border-radius: 12px;
         &-wrapper{
             max-width: 100%;
             margin: 0 auto;
