--- a/frontend/src/Components/Product/Product.scss
+++ b/frontend/src/Components/Product/Product.scss
@@ -106,6 +106,16 @@
             &:hover {
                 background-color: $color-blue-hover;
             }
+
+            &__wrapper{
+                display: flex;
+                gap: 10px;
+                
+                & img {
+                    width: 50px;
+                    height: 100%;
+                }
+            }
         }
         
     }
