--- a/frontend/src/Components/Product/Product.scss
+++ b/frontend/src/Components/Product/Product.scss
@@ -79,6 +79,10 @@
         &-desc{
              margin-bottom: 10px;
              overflow: hidden;
+             display: -webkit-box;
+             -webkit-line-clamp: 2;
+             -webkit-box-orient: vertical;
+             overflow: hidden;
         }
 
         &-cost{
@@ -127,6 +131,9 @@
 @media (max-width: 500px){
     .product-nav img {
         display: none;
+    }
+    .favorite__title {
+        line-height: 36px;
     }
 }
 
