--- a/frontend/src/reset.scss
+++ b/frontend/src/reset.scss
@@ -3,8 +3,14 @@
 
 $color-black: #262626;
 $color-black-hover: #262626d9;
+
 $color-blue: #348df3;
 $color-blue-hover: rgb(25, 130, 250);
+
+$color-gray: #a9a9a9;
+
+$color-pink: #d376d2;
+$color-pink-hover: rgb(186, 86, 185);
 
 
 $fz-big: 34px;
