--- a/frontend/src/Pages/Favorite/Favorite.scss
+++ b/frontend/src/Pages/Favorite/Favorite.scss
@@ -81,6 +81,9 @@
         &__desc{
             margin-bottom: 10px;
             overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
         }
         
         &__cost{
