--- a/frontend/src/Pages/ProductDetailsPage/ProductDetailsPage.scss
+++ b/frontend/src/Pages/ProductDetailsPage/ProductDetailsPage.scss
@@ -117,7 +117,7 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-        max-height: 188px;
+        max-height: 245px;
 
         &__buttons{
             display: flex;
@@ -127,6 +127,25 @@
 
         &__cost{
             font-size: 26px;
+        }
+
+        &__button{
+            &__share .btn{
+                background-color: rgb(255, 255, 255);
+                color: black;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 16px;
+
+                & img{
+                    height: 35px;
+                }
+
+                &:hover{
+                    background-color: rgb(240, 239, 239);
+                }
+            }
         }
 
         &__button .btn{
@@ -151,6 +170,7 @@
   .payment_reveal{
     display: none;
   }
+
 
   @media(max-width: 1180px){
     .payment_reveal{
