--- a/frontend/src/Pages/ProductDetailsPage/ProductDetailsPage.scss
+++ b/frontend/src/Pages/ProductDetailsPage/ProductDetailsPage.scss
@@ -87,6 +87,8 @@
         &__title{
             font-size: 26px;
             margin-bottom: 50px;
+            word-wrap: break-word;
+            line-height: 36px;
         }
         
         &__desc{
