--- a/frontend/src/Pages/Favorite/Favorite.scss
+++ b/frontend/src/Pages/Favorite/Favorite.scss
@@ -93,3 +93,91 @@
         }
     }
 }
+
+
+.ofdf {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ofdf div {
+    width: 80%;
+}
+
+.ofdf img {
+    width: 14%;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+.modal__favorite {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 500px;
+    width: 90%;
+
+    & h3{
+        font-size: 22px;
+        margin-bottom: 10px;
+        font-weight: 500;
+    }
+
+    & p{
+        font-size: 18px;
+        color: gray;
+    }
+}
+
+.modal-overlay__favorite {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999; /* чтобы модальное окно было поверх всего остального контента */
+}
+
+.modal-close__favorite {
+    font-size: 29px;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+}
+
+.modal-buttons__favorite {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+
+    & button {
+        padding: 8px 16px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+}
+
+.red__button__favorite .btn {
+    background-color: red;
+
+    &:hover{
+        background-color: rgb(235, 4, 4)
+    }
+}
