страница продавца + изменние товара

--- a/frontend/src/Pages/SellerEdit/SellerEdit.scss
+++ b/frontend/src/Pages/SellerEdit/SellerEdit.scss
@@ -1,3 +1,11 @@
 
 
 @import '../AddProduct/AddProduct.scss';
+@import '../Favorite/Favorite.scss';
+
+
+.edit__product{
+    font-size: 34px;
+    margin-bottom: 30px;
+    line-height: 42px;
+}
