--- a/frontend/src/Pages/Orders/Orders.scss
+++ b/frontend/src/Pages/Orders/Orders.scss
@@ -59,5 +59,11 @@
 }
 
 
+.favorite__item__cost.order__cost{
+    display: inline-block;
+    margin-bottom: 20px;
+}
 
-
+.favorite__item__title.order__cost{
+    margin-bottom: 10px;
+}
